--- a/part7/extending-the-bloglist/bloglist-frontend/src/index.css
+++ b/part7/extending-the-bloglist/bloglist-frontend/src/index.css
@@ -1,17 +1,12 @@
-.error {
-  color: red;
-  background: lightgray;
-  font-size: 20px;
-  border: solid 5px;
-  padding: 10px;
-  margin-bottom: 10px;
+body {
+  font-family: 'Montserrat', sans-serif;
 }
 
-.notification {
-  color: green;
-  background: lightgray;
-  font-size: 20px;
-  border: solid 5px;
-  padding: 10px;
-  margin-bottom: 10px;
+.navLink {
+  text-decoration: none;
+  color: orange !important;
+}
+
+.navLink:hover {
+  color: darkorange !important;
 }
